# lang-ipk

./: .glottologid.txt  CITATION.cff  Links.md  Makefile.in  README.markdown  README.md  _config.yml  adverbs-stems-fst-src.md  clitics-morphology.md  configure.ac  determiners-stems.md  functions-cg3-src.md  index-header.md  index.md  ipk.md  language-map.md  manifest.toml  manifest.toml.in  root-fst-src.md  root-morphology.md  src-cg3-functions.cg3.md  src-fst-affixes-symbols.lexc.md  src-fst-affixes-verbs.lexc.md  src-fst-clitics.lexc.md  src-fst-morphology-affixes-nouns.lexc.md  src-fst-morphology-affixes-symbols.lexc.md  src-fst-morphology-affixes-verbs.lexc.md  src-fst-morphology-clitics.lexc.md  src-fst-morphology-root.lexc.md  src-fst-morphology-stems-abbreviations.lexc.md  src-fst-morphology-stems-adverbs.lexc.md  src-fst-morphology-stems-determiners.lexc.md  src-fst-morphology-stems-nouns.lexc.md  src-fst-morphology-stems-verbs.lexc.md  src-fst-phonetics-txt2ipa.xfscript.md  src-fst-root.lexc.md  src-fst-stems-abbreviations.lexc.md  src-fst-stems-adverbs.lexc.md  src-fst-stems-determiners.lexc.md  src-fst-stems-nouns.lexc.md  (+17 more)
.gut/: delta.toml
corp/: breakfastfood.txt  maclean.txt  test-wrong.txt  test.txt
doc/: index.xml
docs/: Links.md  Makefile.am  _config.yml  abbreviations-stems.md  index-header.md  index.md  ipk.md  language-map.md  link-header.md  nouns-stems.md  transcriptor-abbrevs2text.md
docs/badgedata/: speller-suggestions.json
docs/typosreport/: report.json
m4/: giella-config-files.m4
res/: korpustags.ipk.txt  paradigm.ipk.txt
(+41 files in other folders)
