## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md \
		  transcriptor-abbrevs2text.md \
		  abbreviations-stems.md      \
		  adverbs-stems.md            \
		  determiners-stems.md            \
		  nouns-stems.md              \
		  verbs-stems.md

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
